# WebChat

./: CMakeLists.txt
source/: main.cpp
source/chatUi/: chatApp.cpp  chatApp.h  chatDestUser.cpp  chatFrame.cpp  chatFrame.h  chatUi.cpp  chatUi.h
source/client/: client.cpp
source/commModule/: commModule.cpp  commModule.h  commModuleServer.cpp  commModuleServer.h
source/login/: login.cpp  login.h
source/server/: server.cpp
